--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <li><a href='file:///Users/vivsogo/Downloads/IMG_4138.jpg'>Surfing</a></li>
             <li><a href='file:///Users/vivsogo/Downloads/D5FC81A2-EF1D-4BE2-B78A-859826DCED96-2476-000000F92BCEF364.jpg'>Traveling</a></li>
         </ul>
-          
+        
+        <p1>Draw me a smiley face to wish me luck this semster!</p1>
     </div>
   </div>
 
