added new drawing

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
             <li><a href='file:///Users/vivsogo/Downloads/D5FC81A2-EF1D-4BE2-B78A-859826DCED96-2476-000000F92BCEF364.jpg'>Traveling</a></li>
         </ul>
         
-        <p1>Draw me a smiley face to wish me luck this semster!</p1>
+        <p>Draw me a smiley face to wish me luck this semster!</p>
+        <h1>Drawing with mouse events</h1>
+        <canvas id="myPics" width="560" height="360"></canvas>
+
     </div>
   </div>
 
