changed list to images

--- a/index.html
+++ b/index.html
@@ -29,21 +29,39 @@
           </style>
        <img 
         class="circular--square"
-        src="file:///Users/vivsogo/Downloads/IMG_7761.jpg"
+        src="./images/IMG_7761.jpg"
         alt="Casper and I"
         title="My puppy Casper and I enjoying the beach"
         >
-        <p>In 2020 I decided I was going to leave the health care field and pursue a career in Software Engineering. It’s taken a long road to get here and after weeks of studying I created my first website. At the end of this journey I hope to become an awesome software engineer! Here are some things that I like to do when I’m not studying:</p>
-        <ul id="test">
-            <li><a href='https://www.youtube.com/watch?v=WkqecpHcIPw'>Soccer</a></li>
-            <li><a href='file:///Users/vivsogo/Downloads/23EED0A4-D2FD-426D-9F00-BE1ED9F954DD-87450-00000D48FA691578.jpg'>Photography</a></li>
-            <li><a href='https://www.youtube.com/watch?v=qOsp6IMqnn0'>Cooking</a></li>
-            <li><a href='file:///Users/vivsogo/Downloads/IMG_4138.jpg'>Surfing</a></li>
-            <li><a href='file:///Users/vivsogo/Downloads/D5FC81A2-EF1D-4BE2-B78A-859826DCED96-2476-000000F92BCEF364.jpg'>Traveling</a></li>
-        </ul>
+        <p>In 2020 I decided I was going to leave the health care field and pursue a career in Software Engineering. 
+            It’s taken a long road to get here and after weeks of studying I created my first website. At the end of this journey I hope to become an awesome software engineer! 
+            Here are some things that I like to do when I’m not studying:</p>
+    
+        <div class="row">
+         <div class="image">
+            <img src="./images/photography.jpg" alt="photography" style="width: 100%;"/>
+             <div class="image__overlay">
+                <div class="image__title">Photography</div>
+                <p class="image__discription">A shot taken on my Fujiflim camera with a wide scope lens</p>
+             </div>
+          </div>
+           <div class="image">
+            <img src="./images/IMG_4138.jpg" alt="Surf"style="width: 100%;"/>
+            <div class="image__overlay">
+                <div class="image__title">Surfing</div>
+                <p class="image__discription">A recent trip to Hawaii led me to some pretty cool waves</p>
+            </div>
+          </div>
+         <div class="image">
+            <img src="./images/Travel.jpg" alt="Travel"style="width: 100%;"/>
+            <div class="image__overlay">
+                <div class="image__title">Travel</div>
+                <p class="image__discription">Nothing like a sunrise hike in the clouds </p>
+            </div>
+         </div>
         
-        <p>Draw me a smiley face to wish me luck this semster!</p>
-        <h1>Drawing with mouse events</h1>
+        </div>
+        <h1>Draw me a smiley face to wish me luck this semster!</h1>
         <canvas id="myPics" width="560" height="360"></canvas>
 
     </div>
